syntax = "proto3";

package gen_v1;

option go_package = "internal/pkg/gen_v1";

// Сервис для генерации астрологических консультаций
service GeneratorV1 {
  // Генерирует PDF-файл с консультацией
  rpc GenerateCons(GenerateConsRequest) returns (GenerateConsResponse) {
    option (google.api.http) = {
      post: "/v1/generate_cons"
      body: "*"
    };
  }
}

// Информация о месте рождения
message BirthCityInfo {
  string city = 1;        // Город рождения
  string coordinates = 2; // Координаты города рождения
}

// Запрос на генерацию консультации
message GenerateConsRequest {
  string name = 1;                           // Имя клиента
  string user_id = 2;                        // ID пользователя
  string birth_date = 3;                     // Дата рождения
  string birth_time = 4;                     // Время рождения
  BirthCityInfo birth_city = 5;              // Город рождения
  bool know_birth_time = 6;                  // Флаг, знает ли пользователь точное время рождения
  string selected_consultations = 7;         // Выбранный тип консультации
  string partner_name = 8;                   // Имя партнера (для синастрии)
  string partner_birth_date = 9;             // Дата рождения партнера
  string partner_birth_time = 10;            // Время рождения партнера
  BirthCityInfo partner_birth_city = 11;     // Город рождения партнера
  bool partner_know_birth_time = 12;         // Флаг, знает ли пользователь точное время рождения партнера
  string product_id = 13;                    // ID продукта/заказа
}

// Ответ с сгенерированной консультацией
message GenerateConsResponse {
  bytes cons = 1; // Байты PDF-документа
}

// Импорт Google API аннотаций
import "google/api/annotations.proto";